--- a/templates/home/partials/_headerHome.html.twig
+++ b/templates/home/partials/_headerHome.html.twig
@@ -1,13 +1,11 @@
 <!-- headHome -->
 <ul>
     <li class="nav-item">
-        <a class="nav-link" href="{{ path('app_frontuser_new') }}"><span>Créer un nouveau compte</span></a>
+        <a class="nav-link" href="{{ path('app_frontuser_new') }}"><span>S'inscrire</span></a>
     </li>
-    <!--hr class="sidebar-divider">-->
+
     <li class="nav-item">
         <a class="nav-link" href="{{ path('app_account') }}"><span>Connexion</span></a>
     </li>
-    <li class="nav-item">
-        <a class="nav-link" href="{{ path('user_logout') }}"><span>Deconnexion</span></a>
-    </li>
 </ul>
+
