--- a/templates/account/account_login.html.twig
+++ b/templates/account/account_login.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'account/baseAccount.html.twig' %}
 
 {% block title %}Hello AccountController!{% endblock %}
 
