--- a/templates/home/partials/_footerHome.html.twig
+++ b/templates/home/partials/_footerHome.html.twig
@@ -1,7 +1,7 @@
 <!-- footerHome -->
 <ul>
     <li class="nav-item">
-        <a class="nav-link" href="{ path('app_admin') }"><span>Administrateur</span></a>
+        <a class="nav-link" href="{{ path('app_admin') }}"><span>Administrateur</span></a>
     </li>
 </ul>
 
