--- a/templates/home/partials/_headerHome.html.twig
+++ b/templates/home/partials/_headerHome.html.twig
@@ -7,5 +7,9 @@
     <li class="nav-item">
         <a class="nav-link" href="{{ path('app_account') }}"><span>Connexion</span></a>
     </li>
+
+    <li class="nav-item">
+        <a class="nav-link" href="{{ path('app_homeCategories_index') }}"><span>Categories</span></a>
+    </li>
 </ul>
 
