--- a/templates/home/partials/_footerHome.html.twig
+++ b/templates/home/partials/_footerHome.html.twig
@@ -1,7 +1,5 @@
 <!-- footerHome -->
-<ul>
-    <li class="nav-item">
-        <a class="nav-link" href="{{ path('app_admin') }}"><span>Administrateur</span></a>
-    </li>
-</ul>
 
+<blockquote class="blockquote text-center">
+    <footer class="blockquote-footer"><a class="nav-link" href="{{ path('app_admin') }}"><span>Administrateur</span></a></footer>
+</blockquote>
