--- a/templates/account/articles/index.html.twig
+++ b/templates/account/articles/index.html.twig
@@ -21,7 +21,7 @@
         {% for article in articles %}
             <tr>
                 <td>{{ article.id }}</td>
-                <td>{{ article.fkCategories}} </td>
+                <td>{{ article.getFkCategories()}} </td>
                 <td>{{ article.titre }}</td>
                 <td><img src="{{ article.logo }}" height="50px" width="auto" alt="image de l'article"></td>
                 <td>{{ article.article }}</td>
@@ -29,7 +29,6 @@
                 <td>
                     <a href="{{ path('app_articles_show', {'id': article.id}) }}">show</a>
                     <a href="{{ path('app_articles_edit', {'id': article.id}) }}">edit</a>
-                    <a href="{{ path('app_commentaires_index', {'idArticle': article.id}) }}">liste des commentaires</a>
                 </td>
             </tr>
         {% else %}
