--- a/templates/account/user/_form.html.twig
+++ b/templates/account/user/_form.html.twig
@@ -1,4 +1,25 @@
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+<div class="my-custom-class-for-errors">
+    {{ form_errors(form) }}
+</div>
+<div class="row">
+    <div>
+        {{ form_row(form.firstname ) }}
+    </div>
+    <div>
+        {{ form_row(form.lastname) }}
+    </div>
+    <div>
+        {{ form_row(form.email) }}
+    </div>
+    <div>
+        {{ form_row(form.password) }}
+    </div>
+    <div>
+        {{ form_row(form._token) }}
+    </div>
+</div>
+<div>
+    <button class="btn" >{{ button_label|default('Save') }}</button>
+</div>
 {{ form_end(form) }}
