--- a/templates/account/user/edit.html.twig
+++ b/templates/account/user/edit.html.twig
@@ -1,13 +1,13 @@
-{% extends 'admin/base_admin.html.twig' %}
+{% extends 'account/base_account.html.twig' %}
 
 {% block title %}Edit User{% endblock %}
 
 {% block body %}
     <h1>Edit User</h1>
 
-    {{ include('admin/user/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('account/user/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_user_index') }}">back to list</a>
+    <a href="{{ path('app_accountuser_index') }}">back to list</a>
 
-    {{ include('admin/user/_delete_form.html.twig') }}
+    {{ include('account/user/_delete_form.html.twig') }}
 {% endblock %}
