--- a/templates/account/user/show.html.twig
+++ b/templates/account/user/show.html.twig
@@ -1,4 +1,4 @@
-{% extends 'admin/base_admin.html.twig' %}
+{% extends 'account/base_account.html.twig' %}
 
 {% block title %}User{% endblock %}
 
@@ -34,9 +34,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_user_index') }}">back to list</a>
+    <a href="{{ path('app_accountuser_index') }}">back to list</a>
 
-    <a href="{{ path('app_user_edit', {'id': user.id}) }}">edit</a>
+    <a href="{{ path('app_accountuser_edit', {'id': user.id}) }}">edit</a>
 
-    {{ include('admin/user/_delete_form.html.twig') }}
+    {{ include('account/user/_delete_form.html.twig') }}
 {% endblock %}
