--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -29,7 +29,7 @@
                 <td><img src="{{ article.logo }}" height="50px" width="auto" alt="image de l'article"></td>
                 <p>{{ article.article }}</p>
                 <p>{{ article.date ? article.date|date('d-m-Y') : '' }}</p>
-                <a href="{{ path('user_login') }}">More...</a>
+                <a href="{{ path('user_login', {'idArticle': article.id}) }}"> Pour commentaire...</a>
                 <br>
                 <hr>
             {% else %}
