--- a/templates/home/partials/_headerHome.html.twig
+++ b/templates/home/partials/_headerHome.html.twig
@@ -1,15 +1,15 @@
 <!-- headHome -->
-<ul>
-    <li class="nav-item">
-        <a class="nav-link" href="{{ path('app_frontuser_new') }}"><span>S'inscrire</span></a>
-    </li>
 
-    <li class="nav-item">
-        <a class="nav-link" href="{{ path('app_account') }}"><span>Connexion</span></a>
-    </li>
-
-    <li class="nav-item">
-        <a class="nav-link" href="{{ path('app_homeCategories_index') }}"><span>Categories</span></a>
-    </li>
-</ul>
-
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="{{ path('app_home') }}">BLOG PETS</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+            <a class="nav-link" href="{{ path('app_homeCategories_index') }}"><span>Categories</span></a>
+            <a class="nav-link" href="{{ path('app_frontuser_new') }}"><span>S'inscrire</span></a>
+            <a class="nav-link" href="{{ path('app_account') }}"><span>Connexion</span></a>
+        </div>
+    </div>
+</nav>
