profil edit OK suppr OK comments edit Ok suppr Ok

--- a/templates/account/commentaires/show.html.twig
+++ b/templates/account/commentaires/show.html.twig
@@ -22,7 +22,7 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_accountcommentaires_index') }}">back to list</a>
+    <a href="{{ path('app_account') }}">back to list</a>
 
     <a href="{{ path('app_accountcommentaires_edit', {'id': commentaire.id}) }}">edit</a>
 
