--- a/templates/account/partials/_sidebar.html.twig
+++ b/templates/account/partials/_sidebar.html.twig
@@ -1,7 +1,7 @@
 <!-- Sidebar -->
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{{ path('app_account') }}">
                 <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fa-solid fa-laugh-wink"></i>
                 </div>
@@ -13,10 +13,6 @@
 
             <hr class="sidebar-divider">
 
-
-            <li class="nav-item">
-               <a class="nav-link" href="{# { path('app_accountcommentaires_index', {'id': commentaire.id}) }} #}"><span>Commentaires</span></a>
-            </li>
 
             <hr class="sidebar-divider d-none d-md-block">
 
