--- a/templates/account/user/edit.html.twig
+++ b/templates/account/user/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('account/user/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_accountuser_index') }}">back to list</a>
+    <a href="{{ path('app_account') }}">back to list</a>
 
     {{ include('account/user/_delete_form.html.twig') }}
 {% endblock %}
