--- a/templates/account/commentaires/edit.html.twig
+++ b/templates/account/commentaires/edit.html.twig
@@ -5,9 +5,9 @@
 {% block body %}
     <h1>Edit Commentaires</h1>
 
-    {{ include('admin/commentaires/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('account/commentaires/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_commentaires_index') }}">back to list</a>
+    <a href="{{ path('app_account') }}">back to list</a>
 
-    {{ include('admin/commentaires/_delete_form.html.twig') }}
+    {{ include('account/commentaires/_delete_form.html.twig') }}
 {% endblock %}
