--- a/templates/account/new.html.twig
+++ b/templates/account/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('account/user/_form.html.twig') }}
 
-    <a href="{# { path('app_account') }} #}">//back to list</a>
+    <a href="{{ path('app_account') }} ">//back to list</a>
 {% endblock %}
