--- a/templates/account/user/show.html.twig
+++ b/templates/account/user/show.html.twig
@@ -34,7 +34,7 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_accountuser_index') }}">back to list</a>
+    <a href="{{ path('app_account') }}">back to list</a>
 
     <a href="{{ path('app_accountuser_edit', {'id': user.id}) }}">edit</a>
 
